--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -32,3 +32,12 @@ sidebar:
 
 ## Якщо у вас виникли проблеми
 В першу чергу спробуйте знайти відповідь самостійно, використовуючи нашу вікіпедію та пошук. Якщо ви не знайшли відповідь на своє питання, зверніться до адміністрації сервера, або на наш форум. Ми завжди раді допомогти вам!
+
+## Скільки триває сезон?
+Мінімум 6 місяців. Остаточна тривалість сезону залежить від виходу нових версій та інтересу гравців до сервера
+
+## Чи можу я грати зі смартфона, приставки або Windows 10 Edition (Bedrock)?
+На жаль, у Bedrock Edition гра з мобільних телефонів не підтримується. Однак, існує хороша альтернатива - **PojavLauncher**, який дає змогу запускати Minecraft: Java Edition на пристроях з операційною системою Android
+
+## Якого розміру світи?
+Розмір основного світу становить 6600 на 6600 блоків. Мапа світу буде розширюватися згодом
