--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -4,5 +4,5 @@ description: Єдине місце для всіх ваших запитань
 hasSidebar: true
 isFallback: true
 hero:
-  tagline: Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше! Не знайшли відповідь на своє питання? Задайте його на нашому форумі! ✨
+  tagline: Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше! Не знайшли відповідь на своє питання? Поставте його на нашому форумі! ✨
 ---
