--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -36,7 +36,7 @@ sidebar:
 ## Скільки триває сезон?
 Мінімум 6 місяців. Остаточна тривалість сезону залежить від виходу нових версій та інтересу гравців до сервера
 
-## Чи можу я грати зі смартфона, приставки або Windows 10 Edition (Bedrock)?
+## Чи можу я грати з телефона (Bedrock)?
 На жаль, у Bedrock Edition гра з мобільних телефонів не підтримується. Однак, існує хороша альтернатива - **PojavLauncher**, який дає змогу запускати Minecraft: Java Edition на пристроях з операційною системою Android
 
 ## Якого розміру світи?
