Mobile adaptation, search bar

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,8 +1,21 @@
 ---
-title: Вікіпедія
+title: Вікіпедія сервера UAProject
 description: Єдине місце для всіх ваших запитань
 hasSidebar: true
 isFallback: true
-hero:
-  tagline: Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше! Не знайшли відповідь на своє питання? Поставте його на нашому форумі! ✨
 ---
+
+import Search from '@astrojs/starlight/components/Search.astro';
+
+<div class="text-center">
+    <h2>📚 <strong>Вітаємо на вікіпедії сервера!</strong></h2>
+    <p class=" text-center">Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше!
+        Не знайшли відповідь на своє питання? Поставте його на нашому форумі! Або ж скористайтеся пошуком: </p>
+    <h2>🔍 <strong>Оберіть тему</strong></h2>
+
+    <div class="text-center full-width">
+        <Search/>
+    </div>
+
+</div>
+
