--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -5,17 +5,12 @@ hasSidebar: true
 isFallback: true
 ---
 
-import Search from '@astrojs/starlight/components/Search.astro';
-
 <div class="text-center">
     <h2>📚 <strong>Вітаємо на вікіпедії сервера!</strong></h2>
     <p class=" text-center">Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше!
-        Не знайшли відповідь на своє питання? Поставте його на нашому форумі! Або ж скористайтеся пошуком: </p>
-    <h2>🔍 <strong>Оберіть тему</strong></h2>
+        Не знайшли відповідь на своє питання? Поставте його на нашому форумі. Або ж скористайтеся пошуком! </p>
 
-    <div class="text-center full-width">
-        <Search/>
-    </div>
+    <img src="https://media.discordapp.net/attachments/813158704824189002/1287367089526407259/about_img_1.png?ex=678e2c08&is=678cda88&hm=592e938cf96105996d1bd1d03be78c90bca056ce54b805b7d15d4746b5988f6a&=&format=webp&quality=lossless" alt="Вікіпедія сервера" width="100%"/>
 
 </div>
 
