--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Вікіпедія сервера UAProject
+title: Вікіпедія
 description: Єдине місце для всіх ваших запитань
 hasSidebar: true
 isFallback: true
@@ -10,7 +10,9 @@ isFallback: true
     <p class=" text-center">Єдине місце для всіх ваших запитань. Обирайте тему, яка вас цікавить, і дізнайтеся більше!
         Не знайшли відповідь на своє питання? Поставте його на нашому форумі. Або ж скористайтеся пошуком! </p>
 
-    <img src="https://media.discordapp.net/attachments/813158704824189002/1287367089526407259/about_img_1.png?ex=678e2c08&is=678cda88&hm=592e938cf96105996d1bd1d03be78c90bca056ce54b805b7d15d4746b5988f6a&=&format=webp&quality=lossless" alt="Вікіпедія сервера" width="100%"/>
+    <img
+        src="https://media.discordapp.net/attachments/813158704824189002/1287367089526407259/about_img_1.png?ex=678e2c08&is=678cda88&hm=592e938cf96105996d1bd1d03be78c90bca056ce54b805b7d15d4746b5988f6a&=&format=webp&quality=lossless"
+        alt="Вікіпедія сервера" width="100%"/>
 
 </div>
 
