--- a/src/content/docs/general/economy.mdx
+++ b/src/content/docs/general/economy.mdx
@@ -8,6 +8,7 @@ sidebar:
 
 import craft from '../../../assets/economy/craft.png';
 import insides from '../../../assets/economy/insides.png';
+import wallet from '../../../assets/economy/wallet.png';
 
 На цій сторінці ви знайдете опис економічної системи серверу
 
@@ -29,6 +30,13 @@ import insides from '../../../assets/economy/insides.png';
     <img src={craft.src} width={"60%"} align alt="Гаманець"/>
 </p>
 
+## Для чого потрібен гаманець?
+В цьому сезоні гаманець потрібен для значного більшого переліку речей - від торгівлі з селянами, до отримання валюти за виконання завдань, участь у івентах, а також для зберігання власних коштів, і придбання донатного контенту. Також, він дозволяє вам конвертувати ресурси у валюту серверу, оцінюючи їх вартість. До того ж, це єдиний спосіб отримати донатну валюту на сервері без зовнішніх дій. Курс обміну валют може змінюватися залежно від попиту та пропозиції на сервері
+
+<p align={"center"}>
+    <img src={wallet.src} width={"60%"} align alt="Вміст гаманця"/>
+</p>
+
 ## Способи отримання валюти
 Для цього існує цікава механіка: оцінка. Обираєте будь-який предмет, і переносите його у вміст Гаманця, бачите оцінку у Копійках, після чого підтверджуєте продаж або відміняєте! Продавати можна лише невідновлюємі руди, здобуті кайлом із Шовковим дотиком. Коли ви відкриваєте Гаманець, якщо у вас в інвентарі є предмети, які можна продати, вони відобразяться у нижньому віконці меню
 
@@ -41,7 +49,7 @@ import insides from '../../../assets/economy/insides.png';
 :::
 
 <p align={"center"}>
-    <img src={insides.src} width={"60%"} align alt="Вміст гаманця"/>
+    <img src={insides.src} width={"60%"} align alt="Обмін валюти"/>
 </p>
 
 ♥
