Fix spelling mistake

--- a/src/content/docs/general/economy.mdx
+++ b/src/content/docs/general/economy.mdx
@@ -24,7 +24,7 @@ import wallet from '../../../assets/economy/wallet.png';
 :::
 
 ## Як отримати гаманець?
-Його потрібно скрафтити! Для цього вам знадобиться: 6 шкіри, 2 паперу, 1 візер-троянда. Крафт виглядає наступним чином:
+Його потрібно скрафтити! Для цього вам знадобиться: 6 шкіри, 2 паперу, 1 уламок відлуння. Крафт виглядає наступним чином:
 
 <p align={"center"}>
     <img src={craft.src} width={"60%"} align alt="Гаманець"/>
