Change title names color

--- a/src/content/docs/guides/creatorship.mdx
+++ b/src/content/docs/guides/creatorship.mdx
@@ -30,10 +30,10 @@ sidebar:
 ---
 
 ## 🎁 Переваги для контент-мейкерів
-1. **Ексклюзивний статус**:
+1. <p style={{ fontWeight: 'bold', color: 'white' }}>**Ексклюзивний статус**:</p>
 - Отримання унікального префікса у грі та на Discord.
 
-2. **Бонуси та нагороди**:
+2. <p style={{ fontWeight: 'bold', color: 'white' }}>**Бонуси та нагороди**:</p>
 - Передчасний доступ до пояснення прийдешніх подій та оновлень
 - Ексклюзивні косметичні предмети, доступні тільки для контент-мейкерів
 3. <p style={{ fontWeight: 'bold', color: 'white' }}>**Підтримка адміністрації**:</p>
