--- a/src/content/docs/guides/creatorship.mdx
+++ b/src/content/docs/guides/creatorship.mdx
@@ -16,6 +16,9 @@ sidebar:
 - YouTube: 100+ підписників та 500+ переглядів на відео
 - Twitch: 50+ підписників та 10+ середній онлайн на стримах
 - TikTok: 500+ підписників та регулярні перегляди 3000+
+
+P.S. Трансляції на YouTube по суті ідентичні трансляціям на Twitch, та відповідають 2 пункту
+
 2. **Якісний контент**:
 - Відео та трансляції повинні бути високої якості (HD, без шумів та фонових звуків)
 - Контент не повинен містити нецензурної лексики, шкідливого програмного забезпечення або порушень правил сервера
