Add support documentation and chat guide; update content requirements

--- a/src/content/docs/guides/creatorship.mdx
+++ b/src/content/docs/guides/creatorship.mdx
@@ -14,16 +14,16 @@ sidebar:
 ## ✅ Вимоги до контент-мейкерів
 1. **Мінімальна аудиторія**:
 - YouTube: 100+ підписників та 500+ переглядів на відео
-- Twitch: 50+ підписників та 10+ середній онлайн на стримах
-- TikTok: 500+ підписників та регулярні перегляди 3000+
+- Twitch: 30+ підписників та 7+ середній онлайн на трансляціях
+- TikTok: 250+ підписників та регулярні перегляди 1500+
 
 P.S. Трансляції на YouTube по суті ідентичні трансляціям на Twitch, та відповідають 2 пункту
 
 2. **Якісний контент**:
 - Відео та трансляції повинні бути високої якості (HD, без шумів та фонових звуків)
-- Контент не повинен містити нецензурної лексики, шкідливого програмного забезпечення або порушень правил сервера
+- Контент не повинен містити шкідливого програмного забезпечення або порушень правил сервера
 3. **Регулярність публікацій**:
-- Мінімум **1 відео або трансляція** на тиждень
+- Мінімум **1 трансляція** на тиждень, або **1 відео** на місяць
 - У описі контенту обов'язково має бути посилання на сервер та його офіційний сайт/дискорд
 4. **Повага до спільноти**:
 - Заборонено образи гравців та адміністрації
