Update documentation with new features and optimizations; enhance clarity and structure

--- a/src/content/docs/general/additions.mdx
+++ b/src/content/docs/general/additions.mdx
@@ -1,5 +1,5 @@
 ---
-title: Доповнення до ігроладу
+title: 🛠️ Доповнення до ігроладу
 description: Опис усіх доповнень до стандартного ігроладу сервера
 sidebar:
     label: Доповнення
@@ -20,101 +20,142 @@ import slime_bucket from '../../../assets/additions/slime-bucket.gif';
 import exp_bottle from '../../../assets/additions/exp-bottle.png';
 import light_craft from '../../../assets/additions/light-craft.png';
 
-На цій сторінці ви знайдете опис усіх доповнень до стандартного ігроладу сервера
+> **Тут ви знайдете всі додаткові можливості, які покращують ваш досвід гри на сервері!**
 
-## Подвійні двері
+---
 
-Подвійні двері тепер автоматично синхронізують свої сторони, тому обидві двері відчиняються і зачиняються одночасно. Незалежно від того, чи гравець клацає на них правою кнопкою миші, чи задіяний червоний камінь.
-<p align={"center"}>
-    <img src={doors.src} width={"60%"} align alt="Синхронізовані подвійні двері"/>
+## 🚪 Подвійні двері
+
+Подвійні двері тепер синхронізують свої сторони: обидві відкриваються та закриваються одночасно. Працює як при натисканні ПКМ, так і через червоний камінь.
+
+<p align="center">
+    <img src={doors.src} width="60%" alt="Синхронізовані подвійні двері"/>
 </p>
 
-## Покращене збирання
+---
 
-Клацніть правою кнопкою миші на повністю вирощеній рослині, щоб зібрати врожай і миттєво пересадити її. Ви отримаєте 1-3 предмети. Якщо рослина ще не виросла, ви не отримаєте врожай.
-<p align={"center"}>
-    <img src={harvesting.src} width={"60%"} align alt="Покращене збирання врожаю"/>
+## 🌾 Покращене збирання
+
+Натисніть **ПКМ** на вирощеній рослині, щоб зібрати врожай і миттєво пересадити її.
+Отримаєте **1-3 предмети**. Якщо рослина не виросла, врожаю не буде.
+
+<p align="center">
+    <img src={harvesting.src} width="60%" alt="Покращене збирання врожаю"/>
 </p>
 
-## Сортування сховищ
+---
 
-При натисканні кнопки всі контейнери у формі скрині в радіусі 1 блоку від кнопки автоматично сортуються. Це стосується куба 3x3x3, де кнопка є блоком посередині.
-<p align={"center"}>
-    <img src={sorting.src} width={"60%"} align alt="Сортування сховищ"/>
+## 📦 Сортування сховищ
+
+Натисніть кнопку, і всі **контейнери у радіусі 1 блоку** автоматично сортуються.
+Зона дії: **куб 3×3×3, де кнопка — в центрі**.
+
+<p align="center">
+    <img src={sorting.src} width="60%" alt="Сортування сховищ"/>
 </p>
 
-## Пошук предметів
+---
 
-Якщо ви хочете знайти схожий предмет у скринях навколо, і у вашому інвентарі вже є предмет того ж типу, ви також можете натиснути на нього Shift + ПКМ, щоб виконати пошук за цим типом предмета у сховищах неподалік. Команда `/finditem` працює схожим чином
-<p align={"center"}>
-    <img src={find.src} width={"60%"} align alt="Пошук предметів"/>
+## 🔎 Пошук предметів
+
+- **Shift + ПКМ** на предмет в інвентарі — знайде схожий у скринях навколо.
+- **Команда** `/finditem` працює так само.
+
+<p align="center">
+    <img src={find.src} width="60%" alt="Пошук предметів"/>
 </p>
 
-## Трав'яні стежки
+---
 
-Ви будете бігти швидше на трав'яних доріжках, тому, безумовно, варто побудувати кілька!
-<p align={"center"}>
-    <img src={paths.src} width={"60%"} align alt="Трав'яні стежки"/>
+## 🏃‍♂️ Трав'яні стежки
+
+Бігайте швидше на трав'яних стежках! Варто зробити кілька на базі.
+
+<p align="center">
+    <img src={paths.src} width="60%" alt="Трав'яні стежки"/>
 </p>
 
-## Відкриті рецепти
+---
 
-Ви можете переглянути всі рецепти, які ви вже відкрили **і не тільки**, натиснувши на кнопку з зображенням книги в верхньому лівому куті інвентаря. Це дозволяє вам швидко знайти рецепт, який вам потрібен, не виходячи з гри, навіть якщо ви не відкривали його раніше.
+## 📖 Відкриті рецепти
 
-## Серпи для врожаю
+Переглядайте всі рецепти (навіть ті, що ще не відкриті) **прямо в інвентарі**.
+Натисніть кнопку **з книгою** у верхньому лівому куті.
 
-У вас велике поле? Змайструйте серп, щоб легко збирати врожай на більших ділянках поля. І хоча серпи бувають з різних матеріалів, золотий серп - найкращий. Дерево та камінь - найгірші матеріали, тому вони дозволяють збирати врожай лише в меншому радіусі.
+---
 
-<p align={"center"}>
-    <img src={sickle_craft.src} width={"60%"} align alt="Крафт серпа"/>
+## 🔪 Серпи для врожаю
+
+Збирайте врожай одразу з **великої площі**!
+- **Найкращий серп** — золотий.
+- **Найгірші** (дерево, камінь) — мають маленький радіус дії.
+
+<p align="center">
+    <img src={sickle_craft.src} width="60%" alt="Крафт серпа"/>
 </p>
 
-<p align={"center"}>
-    <img src={sickle_use.src} width={"60%"} align alt="Використання серпа"/>
+<p align="center">
+    <img src={sickle_use.src} width="60%" alt="Використання серпа"/>
 </p>
 
-## Напилок / Дебаг-виделка
+---
 
-Змайструйте собі напилок, щоб змінювати окремі стики стін, парканів, шибок і т.д., а також форму сходів, прямо як Дебаг-палицею!
+## 🏗️ Напилок / Дебаг-виделка
 
-<p align={"center"}>
-    <img src={file_craft.src} width={"60%"} align alt="Крафт напилка"/>
+Напилок дозволяє змінювати **форми блоків**:
+- **Стіни**
+- **Паркани**
+- **Шибки**
+- **Сходи**
+
+<p align="center">
+    <img src={file_craft.src} width="60%" alt="Крафт напилка"/>
 </p>
 
-## Лопатка декорацій
+---
 
-Хочете будувати з градієнтами? Створіть лопатку і врятуйте себе від синдрому повторення. Лопатка розмістить випадковий блок з вашої панелі швидкого доступу, коли ви клацнете правою кнопкою миші на іншому блоку
+## 🎨 Лопатка декорацій
 
-Клацнувши правою кнопкою миші на лопатку в інвентарі, ви можете змінити «джерело ресурсів», тобто рядок інвентарю, звідки вона бере блоки. Ви можете вибрати будь-який рядок інвентарю або панель швидкого доступу.
+- **Розміщує випадковий блок** із вибраного рядка інвентарю.
+- **ПКМ по лопатці в інвентарі** — змінює джерело блоків.
 
-<p align={"center"}>
-    <img src={trowel_craft.src} width={"60%"} align alt="Крафт лопатки"/>
+<p align="center">
+    <img src={trowel_craft.src} width="60%" alt="Крафт лопатки"/>
 </p>
 
-<p align={"center"}>
-    <img src={trowel_use.src} width={"60%"} align alt="Використання лопатки"/>
+<p align="center">
+    <img src={trowel_use.src} width="60%" alt="Використання лопатки"/>
 </p>
 
-## Відро зі слаймом
+---
 
-Клацнувши ПКМ по крихітному слайму з відерцем, ви помістите його туди. Він залишається спокійним, але почне стрибати всередині відра, якщо ви опинитеся в слайм-чанку. Слайма також можна повернути назад у світ, клацнувши ПКМ на блоці
+## 🪣 Відро зі слаймом
 
-<p align={"center"}>
-    <img src={slime_bucket.src} width={"60%"} align alt="Відро зі слаймом"/>
+Зберігайте маленького слайма у відрі!
+- Спокійний всередині, але **стрибає**, якщо ви в слайм-чанку.
+- **ПКМ по блоку** — випустить слайма назад у світ.
+
+<p align="center">
+    <img src={slime_bucket.src} width="60%" alt="Відро зі слаймом"/>
 </p>
 
-## Пляшка досвіду
+---
 
-Зберігайте свій досвід у пляшках досвіду. Створіть порожню пляшку досвіду і клацніть правою кнопкою миші. Невелика частина досвіду буде втрачена, коли ви її заповните, але ви зможете використати його пізніше!
+## 🧪 Пляшка досвіду
 
-<p align={"center"}>
-    <img src={exp_bottle.src} width={"60%"} align alt="Пляшка досвіду"/>
+- Зберігайте досвід у пляшках.
+- **ПКМ з пляшкою** — частина XP зберігається, але трохи втрачається.
+
+<p align="center">
+    <img src={exp_bottle.src} width="60%" alt="Пляшка досвіду"/>
 </p>
 
-## Світло
+---
 
-Створіть світло, щоб освітити свій шлях. Воно не тільки освітлює, але й корисне для декорування будівель!
+## 💡 Світло
 
-<p align={"center"}>
-    <img src={light_craft.src} width={"60%"} align alt="Крафт світла"/>
+- Використовуйте для освітлення або як **декоративний елемент**.
+
+<p align="center">
+    <img src={light_craft.src} width="60%" alt="Крафт світла"/>
 </p>
