--- a/src/content/docs/general/cosmetics.mdx
+++ b/src/content/docs/general/cosmetics.mdx
@@ -1,5 +1,5 @@
 ---
-title: Інформація про косметику
+title: 💄 Інформація про косметику
 description: Детальна інформація про косметику на сервері
 sidebar:
     label: Косметика
@@ -9,34 +9,42 @@ sidebar:
 import frog from '../../../assets/cosmetics/frog-hat.png';
 import menu from '../../../assets/cosmetics/menu.png';
 
-На цій сторінці ви знайдете опис доступної косметики на сервері
+## 🎭 Що таке косметика?
 
-## Що таке косметика
-
-Косметика - декоративні предмети для зміни зовнішнього вигляду вашого персонажу на сервері. Це може бути як проста мила Жабна Шляпка, так і Скриня Скарбів, яку ви зможете одягти на спину свому персонажу
+Косметика — це декоративні предмети, які змінюють зовнішній вигляд вашого персонажа на сервері. Ви можете носити як милу **Жабну Шляпку**, так і, наприклад, **Скриню Скарбів**, яка буде прикрашати вашу спину!
 
 <p align={"center"}>
-    <img src={frog.src} width={"60%"} align alt="Вигляд персонажа із косметикою"/>
+    <img src={frog.src} width={"60%"} alt="Вигляд персонажа із косметикою"/>
 </p>
 
-## Активація косметики
+---
 
-Для цього виконайте на сервері команду `/cosmetics`. Вам відкриється меню із усіма можливими видами косметики на сервері, де ви зможете їх активувати, або деактивувати. Коли ви активуєте косметику, яка, наприклад, замінює собою частину вашої броні - ця зміна суто візуальна
+## 🛠 Як активувати косметику?
+
+1. Виконайте команду **`/cosmetics`** на сервері.
+2. Відкриється меню з усіма доступними видами косметики.
+3. Оберіть бажаний ефект і натисніть **"Активувати"**.
+4. Якщо косметика замінює частину броні — ця зміна лише візуальна.
 
 <p align={"center"}>
-    <img src={menu.src} width={"60%"} align alt="Вигляд меню вибору косметики"/>
+    <img src={menu.src} width={"60%"} alt="Вигляд меню вибору косметики"/>
 </p>
 
-## Способи отримання косметики
+---
 
-Для цього є кілька способів:
+## 🎁 Як отримати косметику?
 
-- Придбати токен у [Крамниці сервера](https://www.uaproject.xyz/shop), вказавши свій ігровий нікнейм, зайти на сервер, і активувати його натиснувши ПКМ тримаючи у головній руці
+Є кілька способів:
 
-- Придбати його за внутрішньоігрову валюту (Аури, Ліки, Копійки) у мандрівного торговця, який іноді з'являється на сервері
+- 🛒 **Придбати токен** у [Крамниці сервера](https://www.uaproject.xyz/shop), вказавши свій нікнейм. Потім активуйте його натисканням ПКМ.
+- 💰 **Обміняти** у мандрівного торговця за внутрішньоігрову валюту (**Аури, Ліки, Копійки**).
+- 🏆 **Виграти** на ігровому івенті або отримати як нагороду за допомогу адміністрації (зокрема за **баг-репорти**).
 
-- Виграти його на ігровому івенті, або отримати в нагороду за допомогу адміністрації. Баг-репорти також враховуються!
+---
+
+## 🔥 Важлива інформація
 
 :::tip
-На відміну від попереднього сезону, цього разу гравець сам обирає косметику, яку хоче отримати, а не отримує випадкову. Також, косметика не зникає після смерті, але може бути деактивована в будь-який момент
+- У цьому сезоні ви **самі обираєте** косметику, яку хочете отримати, а не отримуєте випадковий предмет.
+- Косметика **не зникає після смерті**, але її можна **деактивувати** у будь-який момент.
 :::
