--- a/src/content/docs/general/features.mdx
+++ b/src/content/docs/general/features.mdx
@@ -1,6 +1,6 @@
 ---
-title: Додаткові механіки
-description: Детальна інформація про інші механіки серверу
+title: ⚙️ Додаткові механіки
+description: Детальна інформація про інші механіки сервера
 sidebar:
     label: Механіки
     order: 5
@@ -8,22 +8,41 @@ sidebar:
 
 import bluemap from '../../../assets/additions/bluemap.png';
 
+На цій сторінці ви знайдете опис **цікавих механік**, які допоможуть вам у грі.
 
-На цій сторінці ви знайдете опис інших цікавих механік серверу
+---
 
-## Душі гравців
+## 👻 Душі гравців
 
-Іноді буває так, що ви помираєте. Це не так страшно, як здається на перший погляд. Є кілька правил, які варто дотримуватися, щоб ви могли швидко повернути свої речі:
+На сервері працює **система збереження речей після смерті**.
+Якщо ви загинули, не хвилюйтеся! Просто дотримуйтеся наступних кроків:
 
-1) > Не панікувати! Все під контролем
-2) > Визначити місце смерті. Прямувати туди
-3) > Орієнтуватися по голові вашого скіну на землі
+- > 1️⃣ **Не панікувати!** Все під контролем
+- > 2️⃣ **Знайти місце смерті** та повернутися туди
+- > 3️⃣ **Орієнтуватися по голові вашого скіна**, що залишиться на землі
 
-На місці смерті ви знайдете вашу душу, яку потрібно зібрати. Вона зберігає всі речі, а також частину XP, але зберігається лише 30 хвилин. Щоб забрати її вміст, підійдіть, і натисніть Shift + ПКМ на душу
+📌 На місці смерті ви знайдете **вашу душу**, яка містить:
+- **Усі предмети** з інвентаря
+- **Частину XP**
 
-## Онлайн мапа серверу
-Ви можете переглянути онлайн мапу сервера, щоб знайти потрібне місце, або просто поглянути на красу нашого світу. Для цього перейдіть на [цю сторінку](https://map.uaproject.xyz/)
+⏳ *Душа зберігається лише **30 хвилин**!*
+⌨️ Щоб забрати її вміст, **натисніть Shift + ПКМ** по душі.
+
+---
+
+## 🗺️ Онлайн мапа сервера
+
+На сервері доступна **онлайн-мапа**, яка дозволяє вам:
+- 🔍 **Знаходити потрібні локації**
+- 🌄 **Оцінювати красу світу**
+- 📍 **Планувати подорожі**
+
+📌 Щоб відкрити мапу, перейдіть на **[цю сторінку](https://map.uaproject.xyz/)**.
 
 <p align={"center"}>
-    <img src={bluemap.src} width={"100%"} align alt="Онлайн мапа серверу"/>
+    <img src={bluemap.src} width={"100%"} alt="Онлайн мапа серверу"/>
 </p>
+
+---
+
+❤️ *Грайте, досліджуйте та користуйтеся всіма можливостями сервера!*
