--- a/src/content/docs/general/start.mdx
+++ b/src/content/docs/general/start.mdx
@@ -2,42 +2,96 @@
 title: Загальні вказівки для новачків
 description: Список загальних вказівок для користувачів
 sidebar:
-  label: Початок
-  order: 1
+    label: 📌 Початок
+    order: 1
 ---
 
-На цій сторінці ви знайдете основні і важливі для розуміння вказівки, які допоможуть вам в повноцінній орієнтації на сервері UAProject. Якщо ви не знайшли відповідь на своє питання, зверніться до адміністрації сервера, або на наш форум!
+На цій сторінці ви знайдете **основні та важливі** вказівки, які допоможуть вам швидко зорієнтуватися на сервері **UAProject**. Якщо ви не знайшли відповідь на своє запитання, зверніться до **адміністрації сервера** або відвідайте наш **форум**! 💬
 
+---
 
-## Про що цей сервер?
-Свій початок проєкт взяв у 2022 році, того часу повністю орієнтуючись на поняття так званого "приватного, повністю ванільного сервера", орієнтованого на україномовну аудиторію. Йшли часи, змінялися сезони, і сервер все дедалі відходив від ванільності, набираючи власних особливостей, механік, інновацій, але залишаючись вірним своїм корінням. Сьогодні UAProject - це унікальний проєкт, який поєднує в собі велику кількість різноманітних механік, інновацій, ігрових ролей, івентів, та інших цікавих речей, які роблять гру на сервері неповторною та цікавою
+## ❓ Про що цей сервер?
 
-## Початок гри на сервері
-Повернемося до теперішнього. Хоч сервер досі позиціонує себе як "приватний", потрапити у лави гравців сьогодні значно легше і швидше, ніж колись. Для цього вам потрібно виконати кілька простих кроків:
-1. Увійдіть за допомогою Discord на наш сайт
-2. Заповніть анкету / придбайте допуск
-3. Дочекайтеся перевірки анкети
-4. Під'єднайтеся до сервера
+**UAProject** було засновано у **2022 році** як **приватний, повністю ванільний сервер** для україномовної спільноти. З часом сервер еволюціонував, набуваючи **нових механік, унікальних функцій** та розширюючи можливості гравців, зберігаючи при цьому **автентичність та атмосферу спільноти**.
 
-Вітаємо, ви готові до пригод!
+Сьогодні **UAProject** – це **унікальний проєкт**, що поєднує **цікаві механіки, ігрові ролі, івенти та інновації**, роблячи гру **динамічною та захопливою**. 🚀
 
-## Час перевірки анкети
-На ваше (і наше) щастя, механізм перевірки анкет досить швидкий та автоматизований. Зазвичай, ви отримаєте відповідь на свою анкету протягом 10-30 хвилин після її заповнення. Якщо ви не отримали відповідь протягом тривалого часу, зверніться до адміністрації сервера
+---
 
-## Якщо ви придбали допуск
-Якщо ви придбали допуск, вам не потрібно заповнювати анкету. Все що нам потрібно - це ваш нікнейм на сервері. Після придбання допуску, ви отримаєте роль гравця на нашому Discord сервері, а також можливість під'єднатися до сервера
+## 🎮 Як почати гру на сервері?
 
-## Не вдалося під'єднатися до сервера
-Причин може бути багато: від технічних проблем на сервері до проблем з вашим інтернет-провайдером. Переконайтеся, що ви використовуєте адекватний лаунчер, виберіть версію гри, яка підтримується сервером, перевірте ваше інтернет-з'єднання, перезапустіть гру, перезапустіть комп'ютер, перевірте статус сервера на нашому сайті або в нашому Дискорд-сервері
+Попри те, що сервер досі **приватний**, потрапити до нашої спільноти стало **набагато легше**! Виконайте кілька простих кроків:
 
-## Якщо у вас виникли проблеми
-В першу чергу спробуйте знайти відповідь самостійно, використовуючи нашу вікіпедію та пошук. Якщо ви не знайшли відповідь на своє питання, зверніться до адміністрації сервера, або на наш форум. Ми завжди раді допомогти вам!
+1️⃣ **Увійдіть через Discord** на нашому сайті.
+2️⃣ **Заповніть анкету** або **придбайте допуск**.
+3️⃣ **Дочекайтеся перевірки анкети**.
+4️⃣ **Під’єднайтеся до сервера** та розпочніть пригоду! 🎉
 
-## Скільки триває сезон?
-Мінімум 6 місяців. Остаточна тривалість сезону залежить від виходу нових версій та інтересу гравців до сервера
+---
 
-## Чи можу я грати з телефона (Bedrock)?
-На жаль, у Bedrock Edition гра з мобільних телефонів не підтримується. Однак, існує хороша альтернатива - **PojavLauncher**, який дає змогу запускати Minecraft: Java Edition на пристроях з операційною системою Android
+## ⏳ Час перевірки анкети
 
-## Якого розміру світи?
-Розмір основного світу становить 6600 на 6600 блоків. Мапа світу буде розширюватися згодом
+Система перевірки анкет працює **швидко та автоматично**. Зазвичай відповідь надходить **протягом 10-30 хвилин** після подання заявки. Враховуйте, що **час відповіді може змінюватися** залежно від навантаження на сервер та часу доби.
+
+⚠️ **Якщо відповіді немає довше, ніж очікується**, зверніться до адміністрації сервера.
+
+---
+
+## 💰 Ви придбали допуск?
+
+Якщо ви **придбали допуск**, вам **не потрібно** заповнювати анкету. Все, що необхідно – **вказати свій нікнейм**.
+
+📌 **Що ви отримаєте після придбання?**
+- Роль **гравця** на нашому Discord-сервері.
+- Миттєвий **доступ до гри**.
+
+---
+
+## ❌ Проблеми з підключенням?
+
+Якщо ви не можете підключитися до сервера, перевірте наступне:
+
+- ✅ Використовуєте **відповідний лаунчер**.
+- ✅ Ваша **версія гри** підтримується сервером.
+- ✅ **Інтернет-з'єднання** працює стабільно.
+- ✅ **Перезапустіть** гру та комп'ютер.
+- ✅ **Перевірте статус сервера** на нашому сайті або в Discord.
+
+Якщо проблема залишається, зверніться до **адміністрації**.
+
+---
+
+## 🔎 Якщо у вас виникли питання
+
+Перед тим як звертатися до адміністрації, спробуйте:
+
+- 1️⃣ **Переглянути нашу Вікі** 📖
+- 2️⃣ **Скористатися пошуком** 🔍
+- 3️⃣ **Задати питання на форумі** 💬
+
+Якщо відповідь знайти не вдалося – ми завжди раді допомогти!
+
+---
+
+## ⏳ Скільки триває сезон?
+
+Тривалість сезону – **мінімум 6 місяців**.
+Остаточна тривалість залежить від **оновлень гри** та **активності гравців**.
+
+---
+
+## 📱 Чи можна грати з телефону (Bedrock)?
+
+На жаль, **Bedrock Edition** **не підтримується**.
+Проте є **альтернатива** – **PojavLauncher**, який дозволяє запускати **Minecraft: Java Edition** на **Android**.
+
+---
+
+## 🌍 Якого розміру світи?
+
+🔹 **Основний світ** – **6600×6600 блоків**.
+🔹 **Мапа** буде **розширюватися** з розвитком сервера.
+
+---
+
+💡 **Приєднуйтеся та ставайте частиною спільноти UAProject!** ✨
