--- a/src/content/docs/guides/qct.mdx
+++ b/src/content/docs/guides/qct.mdx
@@ -1,8 +1,8 @@
 ---
-title: Дослідження
-description: Детальна інформація про нових мешканців сервера
+title: 🏕️ Досліджуйте світ
+description: Детальна інформація про нові відкриття на сервері
 sidebar:
-    label: Дослідження
+    label: 🗺️ Дослідження
     order: 4
 ---
 
@@ -10,22 +10,37 @@ import stone from '../../../assets/qct/stone.png';
 import skeletons from '../../../assets/qct/skeletons.png';
 import trader from '../../../assets/qct/trader.png';
 
-## Нові натуральні декорації
-З приходом нового сезону вже зовсім незабаром ви можете побачити нові доповнення до ігрового світу. Нові шматочки каменю, гілки дерев, пні, та навіть залишки стародавніх людей, які колись жили на цих землях!
+З приходом **нового сезону** світ стає ще більш захопливим! Тепер під час ваших подорожей ви можете натрапити на **залишки древніх цивілізацій, уламки каменю, старі гілки, пні**, та навіть **рештки стародавніх людей**!
+
+## 🏔️ Нові натуральні декорації
+
+Світ стане ще більш атмосферним завдяки новим елементам. Вони зроблять ваші дослідження цікавішими, а навколишнє середовище — реалістичнішим.
 
 <p align={"center"}>
     <img src={stone.src} width={"80%"} align alt="Каменюка"/>
 </p>
 
-## Взаємодія з залишками
-Деякі з цих залишків можуть бути взаємодійними. Щоб зібрати їх, вам знадобиться використати кайло, сокиру, або іржавий ключ, який ви так само можете знайти у світі. Після того, як ви зібрали всі залишки, ви можете знайти у них корисні предмети, або навіть скарби!
+---
+
+## ⚒️ Взаємодія з залишками
+
+Деякі **залишки** можна зібрати!
+
+🔹 Вам знадобиться **кайло, сокира** або **іржавий ключ**, який також можна знайти в світі.
+🔹 Після збору залишків ви можете знайти в них **цінні ресурси або навіть скарби!**
 
 <p align={"center"}>
     <img src={skeletons.src} width={"80%"} align alt="Залишки людей"/>
 </p>
 
-## Мандрівний торговець
-З мізерним шансом у ваших подорожах ви можете зустріти мандрівного торговця. Він пропонує вам обміняти ваші знахідки на корисні предмети, або навіть на валюту сервера. Не пропустіть його, він може знайти вам щось дуже цікаве!
+---
+
+## 🧳 Мандрівний торговець
+
+🚶‍♂️ Під час ваших пригод з **невеликим шансом** ви можете натрапити на **мандрівного торговця**!
+
+💰 Він пропонує **обміняти ваші знахідки** на корисні предмети або навіть **валюту сервера**.
+🔥 Не пропустіть його — можливо, саме він допоможе вам знайти щось справді **цінне**!
 
 <p align={"center"}>
     <img src={trader.src} width={"80%"} align alt="Мандрівний торговець"/>
