--- a/src/content/docs/general/economy.mdx
+++ b/src/content/docs/general/economy.mdx
@@ -1,6 +1,6 @@
 ---
-title: Інформація про економіку
-description: Важлива інформація про економіку серверу
+title: 💰 Інформація про економіку
+description: Важлива інформація про економічну систему сервера
 sidebar:
     label: Економіка
     order: 4
@@ -10,46 +10,97 @@ import craft from '../../../assets/economy/craft.png';
 import insides from '../../../assets/economy/insides.png';
 import wallet from '../../../assets/economy/wallet.png';
 
-На цій сторінці ви знайдете опис економічної системи серверу
+На цій сторінці ви знайдете опис економічної системи сервера.
 
-## Валюта серверу
-На сервері є три різновиди валюти: Копійки, Ліки і Аури. Шістдесят чотири Копійки дорівнюють одному Ліку, а шістдесят чотири Ліки дорівнюють одному Ауру (від лат. Aurum - золото)
+---
 
-## Що таке гаманець
-Гаманець - 'магічний' предмет, у якому ви можете зберігати власні кошти на ігровому сервері. Візьміть його в руку і натисніть ПКМ!
-Також гаманець надає можливість конвертувати певні ресурси у ігрову валюту серверу, автоматично оцінюючи їх вартість.
+## 🏦 Валюта сервера
 
-:::tip
-Цього сезону через гаманець ви також будете мати доступ і до донатної валюти, яка буде синхронізована з вашим балансом на сайті. Це означає, що ви зможете витрачати донатну валюту на сайті, а також на сервері, і навпаки.
-:::
+На сервері є три різновиди валюти:
+- **Копійки**
+- **Ліки** (*64 Копійки = 1 Лік*)
+- **Аури** (*64 Ліки = 1 Аура*)
 
-## Як отримати гаманець?
-Його потрібно скрафтити! Для цього вам знадобиться: 6 шкіри, 2 паперу, 1 уламок відлуння. Крафт виглядає наступним чином:
+📌 *Аура* походить від латинського "Aurum" (золото) і є найціннішою валютою.
 
-<p align={"center"}>
-    <img src={craft.src} width={"60%"} align alt="Гаманець"/>
-</p>
+---
 
-## Для чого потрібен гаманець?
-В цьому сезоні гаманець потрібен для значного більшого переліку речей - від торгівлі з селянами, до отримання валюти за виконання завдань, участь у івентах, а також для зберігання власних коштів, і придбання донатного контенту. Також, він дозволяє вам конвертувати ресурси у валюту серверу, оцінюючи їх вартість. До того ж, це єдиний спосіб отримати донатну валюту на сервері без зовнішніх дій. Курс обміну валют може змінюватися залежно від попиту та пропозиції на сервері
+## 🏵️ Що таке гаманець?
 
-<p align={"center"}>
-    <img src={wallet.src} width={"60%"} align alt="Вміст гаманця"/>
-</p>
+**Гаманець** — магічний предмет, у якому ви можете зберігати власні кошти.
+📌 Для перегляду вмісту: **візьміть у руку та натисніть ПКМ**.
 
-## Способи отримання валюти
-Для цього існує цікава механіка: оцінка. Обираєте будь-який предмет, і переносите його у вміст Гаманця, бачите оцінку у Копійках, після чого підтверджуєте продаж або відміняєте! Продавати можна лише невідновлюємі руди, здобуті кайлом із Шовковим дотиком. Коли ви відкриваєте Гаманець, якщо у вас в інвентарі є предмети, які можна продати, вони відобразяться у нижньому віконці меню
+✨ **Можливості гаманця**:
+- Зберігання всіх валют
+- Конвертація ресурсів у валюту
+- Використання донатної валюти
+- Купівля предметів та участь у торгівлі
 
 :::tip
-Також валюту можна отримати за виконання завдань, участь у івентах, а також за допомогу адміністрації сервера, і, звісно, за торгівлю з селянами!
+Гаманець також синхронізується з балансом вашого акаунту на сайті.
+Це означає, що ви можете витрачати **донатну валюту** як на сервері, так і на сайті!
 :::
+
+---
+
+## 🛠️ Як отримати гаманець?
+
+Його потрібно скрафтити!
+📌 Рецепт: **6 шкіри, 2 паперу, 1 уламок відлуння**.
+
+<p align={"center"}>
+    <img src={craft.src} width={"60%"} alt="Гаманець"/>
+</p>
+
+---
+
+## 📥 Для чого потрібен гаманець?
+
+У цьому сезоні гаманець виконує ще більше функцій:
+- Використовується для **торгівлі з селянами**
+- **Зберігає кошти** та дозволяє отримувати валюту за виконання завдань та участь у івентах
+- Дає можливість **конвертувати ресурси у валюту**
+- Є **єдиним способом отримати донатну валюту без зовнішніх дій**
+- Використовується для **купівлі донатного контенту**
+
+📌 *Курс обміну валют змінюється залежно від попиту та пропозиції на сервері.*
+
+<p align={"center"}>
+    <img src={wallet.src} width={"60%"} alt="Вміст гаманця"/>
+</p>
+
+---
+
+## 💸 Способи отримання валюти
+
+### 📊 Оцінка предметів
+Ви можете **продавати ресурси** через механіку оцінки:
+1. **Перемістіть предмет у Гаманець**
+2. **Отримайте оцінку у Копійках**
+3. **Підтвердіть продаж або відмініть його**
+
+📌 *Продавати можна лише невідновлювані руди, добуті кайлом із "Шовковим дотиком".*
+📌 *Якщо у вас в інвентарі є предмети, які можна продати, вони автоматично відобразяться у нижньому вікні Гаманця.*
+
+<p align={"center"}>
+    <img src={insides.src} width={"60%"} alt="Обмін валюти"/>
+</p>
+
+---
+
+## 🎯 Альтернативні способи заробітку
+
+💎 **Завдання та івенти**
+🎭 **Допомога адміністрації** (*наприклад, баг-репорти*)
+🏪 **Торгівля з селянами**
+👑 **Продаж рідкісних предметів іншим гравцям**
 
 :::caution
-Для балансування заробітку, вартість предметів може змінюватися залежно від попиту та пропозиції на сервері. Також, може бути встановлений ліміт на продаж певних предметів на день. Слідкуйте за оновленнями!
+💰 Вартість предметів може змінюватися залежно від попиту та пропозиції!
+⚠️ На деякі ресурси встановлений **денний ліміт продажу**.
+📰 **Слідкуйте за оновленнями економіки**!
 :::
 
-<p align={"center"}>
-    <img src={insides.src} width={"60%"} align alt="Обмін валюти"/>
-</p>
+---
 
-♥
+❤️ *Грайте, заробляйте та розвивайте власну економіку!*
