Update sidebar labels for various documentation pages; enhance visual clarity with emojis

--- a/src/content/docs/general/additions.mdx
+++ b/src/content/docs/general/additions.mdx
@@ -2,7 +2,7 @@
 title: 🛠️ Доповнення до ігроладу
 description: Опис усіх доповнень до стандартного ігроладу сервера
 sidebar:
-    label: Доповнення
+    label: 🧮 Доповнення
     order: 2
 ---
 
