--- a/src/content/docs/general/cosmetics.mdx
+++ b/src/content/docs/general/cosmetics.mdx
@@ -2,7 +2,7 @@
 title: 💄 Інформація про косметику
 description: Детальна інформація про косметику на сервері
 sidebar:
-    label: Косметика
+    label: 🧴 Косметика
     order: 3
 ---
 
