--- a/src/content/docs/general/economy.mdx
+++ b/src/content/docs/general/economy.mdx
@@ -2,7 +2,7 @@
 title: 💰 Інформація про економіку
 description: Важлива інформація про економічну систему сервера
 sidebar:
-    label: Економіка
+    label: 🏦 Економіка
     order: 4
 ---
 
