--- a/src/content/docs/general/features.mdx
+++ b/src/content/docs/general/features.mdx
@@ -2,7 +2,7 @@
 title: ⚙️ Додаткові механіки
 description: Детальна інформація про інші механіки сервера
 sidebar:
-    label: Механіки
+    label: 🦾 Механіки
     order: 5
 ---
 
