--- a/src/content/docs/guides/creatorship.mdx
+++ b/src/content/docs/guides/creatorship.mdx
@@ -2,7 +2,7 @@
 title: Система контент-мейкерів
 description: Детальна інформація про систему контент-мейкерів
 sidebar:
-    label: Авторство
+    label: 🎥 Авторство
     order: 1
 ---
 
