Add GIF demonstrations for demoness, door, and sun pathways

--- a/src/content/docs/pathways/demoness.mdx
+++ b/src/content/docs/pathways/demoness.mdx
@@ -6,6 +6,9 @@ sidebar:
     order: 6
 ---
 
+import stealth from '../../../assets/pathways/demoness/stealth.gif';
+import feather from '../../../assets/pathways/demoness/feather-falling.gif';
+
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
 
@@ -48,11 +51,17 @@ sidebar:
 #### 🗡️ Прихований Удар
 Завдайте смертельного удару з тіні. Якщо ворог не підозрює, шкода підвищується.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <img src={stealth.src} width={"80%"} alt="Прихований удар"/>
+</p>
 
 
 #### 🍃 Пір'їнкове Падіння
 Приземляйтеся з великої висоти м'яко.
+
+<p align={"center"}>
+    <img src={feather.src} width={"80%"} alt="Плавне падіння"/>
+</p>
 
 {/* [GIF демонстрація] */}
 
