--- a/src/content/docs/pathways/door.mdx
+++ b/src/content/docs/pathways/door.mdx
@@ -6,6 +6,8 @@ sidebar:
     order: 2
 ---
 
+import door_opening from '../../../assets/pathways/door/door-opening.gif';
+
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
 
@@ -48,7 +50,9 @@ sidebar:
 #### 🚪 Відчинення Дверей
 Проходьте крізь тверді поверхні, наче крізь ілюзорні двері зі світла.
 
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <img src={door_opening.src} width={"80%"} alt="Відчинення Дверей"/>
+</p>
 
 #### 🎭 Підступні Чари
 Використовуйте прості чари, щоб збити ворогів з пантелику.
