--- a/src/content/docs/pathways/sun.mdx
+++ b/src/content/docs/pathways/sun.mdx
@@ -2,9 +2,12 @@
 title: 🌞 Шлях Сонця
 description: Детальна інформація про шлях Сонця на сервері
 sidebar:
-    label: 🌞 Сонце
-    order: 1
+label: 🌞 Сонце
+order: 1
 ---
+
+import bard_song from '../../../assets/pathways/sun/bard-song.gif';
+import holy_light from '../../../assets/pathways/sun/holy-light.gif';
 
 :::caution[⚠️ Дисклеймер]
 > 🎭 За те, що дарує доля, завжди доводиться платити, чи не так?
@@ -48,17 +51,9 @@ sidebar:
 #### 🎵 Пісня Барда
 Зачаровує істот поруч, надаючи собі та союзникам посилення.
 
-{/* [GIF демонстрація] */}
-
-#### 🔥 Світло і Вогонь
-Скористайтеся силою світла та вогню, щоб вигнати темряву.
-
-{/* [GIF демонстрація] */}
-
-#### 🛡️ Імунітет до Жаху
-Надає імунітет до ефектів страху та психічних атак (негативних ефектів)
-
-{/* [GIF демонстрація] */}
+<p align={"center"}>
+    <img src={bard_song.src} width={"80%"} alt="Пісня Барда"/>
+</p>
 
 ---
 
@@ -66,8 +61,15 @@ sidebar:
 
 ---
 
-#### ✨ Святе Світло
-Випромінює священну енергію для очищення і зцілення (у випадку з мобами - навпаки)
+#### 🔥 Світло і Вогонь
+Скористайтеся силою світла та вогню, щоб вигнати темряву.
+
+<p align={"center"}>
+    <img src={holy_light.src} width={"80%"} alt="Світло і Вогонь"/>
+</p>
+
+#### 🛡️ Імунітет до Жаху
+Надає імунітет до ефектів страху та психічних атак (негативних ефектів)
 
 {/* [GIF демонстрація] */}
 
@@ -84,6 +86,11 @@ sidebar:
 
 #### 📜 Клятва Святості
 Присягніть непохитною присягою й отримуйте бафи, поки діє присяга.
+
+{/* [GIF демонстрація] */}
+
+#### ✨ Святе Світло
+Випромінює священну енергію для очищення і зцілення (у випадку з мобами - навпаки)
 
 {/* [GIF демонстрація] */}
 
